# ComfyUi-Lite

./: .gitignore  README.md  execution.py  main.py  nodes.py  requirements.txt
ComfyUI_frontend/pip_package/: README.md  pyproject.toml
ComfyUI_frontend/pip_package/comfyui_frontend_package/: __init__.py
desktopmac/assets/ComfyUI/workflow_templates/: .lycheeignore  .yamllint.yml  AGENTS.md  CLAUDE.md  README.md  blueprints_bundles.json  bundles.json  nx.json  package-lock.json  package.json  pyproject.toml  run_full_validation.sh  tsconfig.base.json  vercel.json  workflow_template_input_files.json  workflow_template_output_files.json
desktopmac/assets/ComfyUI/workflow_templates/.claude/: settings.json  settings.local.json
desktopmac/assets/ComfyUI/workflow_templates/archived/: api_hunyuan3d_texture_edit.json  archived_i18n.json  index.ar.json  index.es.json  index.fr.json  index.ja.json  index.json  index.ko.json  index.pt-BR.json  index.ru.json  index.tr.json  index.zh-TW.json  index.zh.json  mochi_text_to_video_example.json
desktopmac/assets/ComfyUI/workflow_templates/blueprints/: index.schema.json
desktopmac/assets/ComfyUI/workflow_templates/docs/: BLUEPRINTS.md  CREATORS.md  I18N_GUIDE.md  SPEC.md  publishing-workflow-templates.md  reverse-proxy-adr.md
desktopmac/assets/ComfyUI/workflow_templates/scripts/: README_whitelist.md  analyze_models.py  archive_templates.py  check_input_assets.md  check_input_assets.py  check_links.py  check_templates.sh  ci_version_manager.py  fix_subgraph_bypass_modes.py  generate_workflow_io.py  i18n.json  import_blueprints.py  missing_translations_report.json  report_bundle_sizes.py  restore_templates.py  sync_blueprints.py  sync_bundles.py  sync_custom_nodes.py  sync_data.py  update_index_with_sizes.py  validate_blueprints.py  validate_manifests.py  validate_templates.py  validate_thumbnails.py  whitelist.json
desktopmac/assets/ComfyUI/workflow_templates/site/: .env.example  .i18nrc.cjs  .prettierignore  AGENTS.md  CONTRIBUTING.md  README.md  astro.config.mjs  creators.json  eslint.config.js  knip.json  lighthouserc.json  (+5 more)
(+670 files in other folders)
