[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-lite-frontend"
version = "1.0.0"
description = "ComfyUI Lite Frontend - Lightweight version without PyTorch dependency, with concurrent node execution"
authors = [
    {name = "josephxie1"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0"}

[tool.setuptools.packages.find]
include = ["comfyui_frontend_package*"]

[tool.setuptools.package-data]
comfyui_frontend_package = ["static/**/*"]
